推荐样式修改

--- a/templates/macro/post-card.html
+++ b/templates/macro/post-card.html
@@ -52,7 +52,7 @@
                         </span>
                     </div>
                     <span class="text-ob-dim">
-                        [[${#dates.format(post.spec.publishTime, 'MMMM dd,yyyy')}]]
+                        [[${#dates.format(post.spec.publishTime, 'yyyy-MM-dd')}]]
                     </span>
                 </div>
             </div>
