--- a/templates/post.html
+++ b/templates/post.html
@@ -66,7 +66,7 @@
 
                     <p class="relative flex items-center pb-2 mb-4 text-xl text-ob-bright uppercase" style="margin-top: 40px;">
                         <i class="roozenfont roozen-angle-double-right"></i> &nbsp;
-                        <b>为你推荐</b>
+                        <b>猜你喜欢</b>
                         <span class="absolute bottom-0 h-1 w-14 rounded-full"
                               style="background: linear-gradient(130deg, rgb(36,198,220), rgb(84,51,255) 41.07%, rgb(255,0,153) 76.05%);"></span>
                     </p>
