--- a/templates/modules/main-rec.html
+++ b/templates/modules/main-rec.html
@@ -66,14 +66,14 @@
         @media (max-width: 768px) {
             .post-item {
                 padding: 6px 6px; /* 调整左右 padding */
-                flex-basis: calc(50% - 0.2rem) !重要;
+                flex-basis: calc(50% - 0.2rem) !important;
             }
         }
 
         @media (max-width: 440px) {
             .post-item {
                 padding: 6px 2px; /* 调整左右 padding */
-                flex-basis: calc(50% - 0.1rem) !重要;
+                flex-basis: calc(50% - 0.1rem) !important;
             }
         }
 
@@ -98,7 +98,7 @@
             <p id="article-list"
                class="relative opacity-90 flex items-center pt-12 pb-2 mb-8 text-3xl text-ob-bright uppercase">
                 <i class="roozenfont roozen-hand-heart-fill" style="font-size: 1em;"></i> &nbsp;
-                猜你喜欢
+                推荐
                 <span class="absolute bottom-0 h-1 w-24 rounded-full"
                       style="background: linear-gradient(130deg, rgb(36, 198, 220), rgb(84, 51, 255) 41.07%, rgb(255, 0, 153) 76.05%);"></span>
             </p>
