--- a/templates/modules/nav.html
+++ b/templates/modules/nav.html
@@ -17,13 +17,29 @@
         .header-placeholder {
             height: 70px; /* Adjust based on actual header height */
         }
+        .site-header .title {
+            font-size: 2rem; /* Default size for desktop */
+            line-height: 2.5rem;
+        }
+        @media (max-width: 768px) {
+            .site-header .title {
+                font-size: 1.5rem; /* Smaller size for tablets */
+                line-height: 2rem;
+            }
+        }
+        @media (max-width: 480px) {
+            .site-header .title {
+                font-size: 1rem; /* Even smaller size for mobile phones */
+                line-height: 1.5rem;
+            }
+        }
     </style>
     <div class="header-placeholder"></div> <!-- Placeholder -->
     <div class="header-container">
         <header class="site-header">
             <div onclick="javascript:window.location.href='/'" class="flex items-start self-stretch relative">
                 <div class="flex flex-col relative py-4 z-10 text-white font-medium ob-drop-shadow cursor-pointer" style="padding-bottom: 0em">
-                    <span class="flex text-4xl"
+                    <span class="flex text-4xl title"
                           th:text="${#strings.isEmpty(title) ? site.title : title}"></span>
                     <span class="font-extrabold text-xs uppercase"
                           th:text="${#strings.isEmpty(subtitle) ? site.subtitle : subtitle}"></span>
