--- a/templates/modules/widgets/nav-right.html
+++ b/templates/modules/widgets/nav-right.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <!-- 导航栏菜单栏 -->
 <th:block th:fragment="nav-right">
-    <div id="nav-right" class="header-controls absolute top-10 right-0 flex flex-row"
-         tabindex="0" style="z-index:999;right: -40px;width: 140px;">
+    <div id="nav-right" class="header-controls absolute  right-0 flex flex-row"
+         tabindex="0" style="z-index:999;right: -40px;width: 140px; top:0.5em">
         <span class="ob-drop-shadow" data-dia="search" onclick="SearchWidget.open()">
             <i class="roozenfont roozen-magnifying-glass" style="font-size: x-large"></i>
             &nbsp;
