去掉悬浮球 和手机部分

--- a/templates/macro/post-list.html
+++ b/templates/macro/post-list.html
@@ -5,6 +5,7 @@
                 background: linear-gradient(130deg, rgb(36, 198, 220), rgb(84, 51, 255) 41.07%, rgb(255, 0, 153) 76.05%);
             }
         </style>
+        <script type="text/javascript" th:src="@{/assets/js/navigator.js}"></script>
         <ul id="post_tab" th:if="${type=='tag'}" th:with="tags = ${tagFinder.listAll()}" class="tab expanded-tab"
             style="z-index: 9;">
             <li onclick="javascript:window.location.href='/#article-list'" th:classappend="${tag==null}?'active':''">
