--- a/templates/modules/main-rec.html
+++ b/templates/modules/main-rec.html
@@ -90,13 +90,18 @@
 
         .title-container p {
             margin-right: 10px; /* 调整间距 */
+            padding-top: 1em;
         }
+        .title-container button {
+            padding-top: 0em;
+        }
+
     </style>
 
     <div>
         <div class="title-container">
             <p id="article-list"
-               class="relative opacity-90 flex items-center pt-12 pb-2 mb-8 text-3xl text-ob-bright uppercase">
+               class="relative opacity-90 flex items-center pb-2 mb-8 text-3xl text-ob-bright uppercase">
                 <i class="roozenfont roozen-hand-heart-fill" style="font-size: 1em;"></i> &nbsp;
                 推荐
                 <span class="absolute bottom-0 h-1 w-24 rounded-full"
