--- a/templates/modules/widgets/page.html
+++ b/templates/modules/widgets/page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!-- 
+<!--
     分页模块
 
     @param  pageInfo   Halo类型UrlContextListResult<ListedPostVo>
@@ -47,5 +47,8 @@
             </li>
         </a>
     </ul>
+    <div id="returnTop" onclick="returnTop()" class="Ob-Navigator-btt">
+        <i class="roozenfont roozen-arrow-up"></i>
+    </div>
 </div>
 </html>
