--- a/templates/modules/widgets/nav-right.html
+++ b/templates/modules/widgets/nav-right.html
@@ -4,10 +4,10 @@
 <th:block th:fragment="nav-right">
     <div id="nav-right" class="header-controls absolute  right-0 flex flex-row"
          tabindex="0" style="z-index:999;right: -40px;width: 140px; top:0.5em">
-        <span class="ob-drop-shadow" data-dia="search" onclick="SearchWidget.open()">
-            <i class="roozenfont roozen-magnifying-glass" style="font-size: x-large"></i>
-            &nbsp;
-        </span>
+        <span class="ob-drop-shadow" data-dia="search" onclick="window.location.href='/search'">
+    <i class="roozenfont roozen-magnifying-glass" style="font-size: x-large"></i>
+    &nbsp;
+</span>
         <div class="dropdown" style="position: relative;">
             <button class="dropbtn" id="theme-toggle-btn" style="font-size: x-large; padding: 0; background: none; border: none;">
                 <i class="roozenfont roozen-bars" style="color: white;font-size: x-large"></i>
