--- a/templates/search.html
+++ b/templates/search.html
@@ -23,7 +23,10 @@
             <div th:if="${title != '' and size != '' and page != ''}" th:with="page=${param.page != null ? param.page : 1},
   size=${param.size != null && param.size.size() > 0 ? (T(java.lang.Integer).parseInt(param.size[0]) > 12 ? 12 : T(java.lang.Integer).parseInt(param.size[0])) : 12},
   title=${param.title != null && param.title.size() > 0 ? param.title[0] : ''}">
-                <div th:if="${title != '' and size != '' and page != ''}" th:with="posts = ${postFinder.listByTitle(page, size, title)}">
+                <div th:unless="${posts.total == 0}" th:with="posts = ${postFinder.listByTitle(page, size, title)}">
+                    <div th:if="${posts.total == 0}" style="text-align: center;">
+                        <p><strong>没有找到相关内容.</strong></p>
+                    </div>
                     <ul id="post-cols" th:class="${'grid grid-cols-2 gap-8'}">
                         <th:block th:each="post : ${posts.items}">
                             <th:block th:replace="~{macro/post-card :: post-card(${post.spec.pinned},${post})}"/>
@@ -51,20 +54,20 @@
 
                             <th:block th:each="index : ${#numbers.sequence(posts.page - 2, posts.page + 2)}">
                                 <li class="active" th:if="${posts.page == index}" th:text="${posts.page}"></li>
-                                <a th:unless="${posts.page == index}" th:if="${index > 0 && index <= T(java.lang.Math).ceil(posts.total / size)}"
+                                <a th:unless="${posts.page == index}" th:if="${index > 0 && index <= T(java.lang.Math).ceil((posts.total + size - 1) / size)}"
                                    th:href="@{'/search?page=' + ${index} + '&size=' + ${size} + '&title=' + ${title}}">
                                     <li th:text="${index}"></li>
                                 </a>
                             </th:block>
 
-                            <th:block th:if="${T(java.lang.Math).ceil(posts.total / size) - posts.page > 2}">
-                                <li th:if="${T(java.lang.Math).ceil(posts.total / size) - posts.page != 3}">…</li>
-                                <a th:href="@{'/search?page=' + ${T(java.lang.Math).ceil(posts.total / size)} + '&size=' + ${size} + '&title=' + ${title}}">
-                                    <li th:text="${T(java.lang.Math).ceil(posts.total / size)}"></li>
+                            <th:block th:if="${T(java.lang.Math).ceil((posts.total + size - 1) / size) - posts.page > 2}">
+                                <li th:if="${T(java.lang.Math).ceil((posts.total + size - 1) / size) - posts.page != 3}">…</li>
+                                <a th:href="@{'/search?page=' + ${T(java.lang.Math).ceil((posts.total + size - 1) / size)} + '&size=' + ${size} + '&title=' + ${title}}">
+                                    <li th:text="${T(java.lang.Math).ceil((posts.total + size - 1) / size)}"></li>
                                 </a>
                             </th:block>
 
-                            <a th:if="${posts.page < T(java.lang.Math).ceil(posts.total / size)}" th:href="@{'/search?page=' + (${posts.page} + 1) + '&size=' + ${size} + '&title=' + ${title}}">
+                            <a th:if="${posts.page < T(java.lang.Math).ceil((posts.total + size - 1) / size)}" th:href="@{'/search?page=' + (${posts.page} + 1) + '&size=' + ${size} + '&title=' + ${title}}">
                                 <li class="text-ob-bright">以往
                                     <svg class="svg-icon">
                                         <use href="#icon-arrow-right" fill="currentColor" stroke="var(--background-primary)"></use>
@@ -72,9 +75,6 @@
                                 </li>
                             </a>
                         </ul>
-                        <div id="returnTop" onclick="returnTop()" class="Ob-Navigator-btt">
-                            <i class="roozenfont roozen-arrow-up"></i>
-                        </div>
                     </div>
                 </div>
             </div>
